# kristal

./: .gitignore  README.md  meson.build
src/: main.cpp
src/core/: Rules.cpp  Server.cpp  Server.hpp  internal.h  kristal_c_api.h
src/input/: Cursor.cpp  Input.cpp
src/outputs/: Output.cpp
src/protocols/: Protocols.cpp
src/server/: Cursor.cpp  Input.cpp  LayerShell.cpp  Output.cpp  Protocols.cpp  Server.cpp  Server.hpp  Xdg.cpp  Xwayland.cpp  cursor.c  input.c  internal.h  output.c  xdg.c
src/shells/: LayerShell.cpp  Xdg.cpp  Xwayland.cpp
